# Analise_Brasileirao

./: .gitignore  README.md  pyproject.toml
app/: logos.py  main.py
app/api/: consult.py
app/api/classes/: consult_class.py
app/api/schema/: api_football_schema.py
app/pipeline/: extract.py  table.py  transform.py
app/pipeline/classes/: table_class.py
app/pipeline/schemas/: schema.py  table_schema.py
app/visualization/: dashboard.py  graphs.py  tests.py
data/input/: season_2021.json  season_2022.json  season_2023.json
data/input/Backup/: season_2022.json  season_2023.json
data/output/: .~lock.COMPILED_TEAMS_RESULTS.csv#  2023_SEASON_RESULTS.parquet  COMPILED_TEAMS_RESULTS.csv  COMPILED_TEAMS_RESULTS.parquet  SEASON_RESULTS.csv  SEASON_RESULTS.parquet
data/output/Backup/: 2021_SEASON_RESULTS.csv  2022_SEASON_RESULTS.csv  2023_SEASON_RESULTS.csv
data/output/Season_Files/: 2021_SEASON_RESULTS.parquet  2022_SEASON_RESULTS.parquet
