[project]
name = "brasileirao-analise"
version = "0.1.0"
description = "Projeto para analisar os resultados do campeonato brasileiro"
authors = [
    {name = "Joao Pedro Santos",email = "jpedro.csantos@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
